--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -73,7 +73,8 @@ services:
       dockerfile: apps/frontend/Dockerfile
     environment:
       NODE_ENV: production
-      NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL:-http://api:4000/api}
+      NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL:-http://localhost:4000/api}
+      API_INTERNAL_URL: ${API_INTERNAL_URL:-http://api:4000/api}
     depends_on:
       - api
     ports:
