--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "type": "commonjs",
-  "main": "./src/index.ts",
-  "types": "./src/index.ts",
+  "main": "./src/index.js",
+  "types": "./src/index.d.ts",
   "sideEffects": false,
   "dependencies": {
     "tslib": "^2.8.1"
